# photobooth

./: .env  .env.example  CLAUDE.md  package-lock.json  package.json
.specify/memory/: minimaxapi.md
specs/001-ai-photobooth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-photobooth/checklists/: requirements.md
specs/001-ai-photobooth/contracts/: api.yaml
specs/002-ai-style-photo/: spec.md
specs/002-ai-style-photo/checklists/: requirements.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: effect.rs  generate.rs  mod.rs  mode.rs  order.rs  session.rs  style.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: minimax_service.rs  mod.rs  mode_service.rs  session_service.rs  storage.rs  style_service.rs  wechat_service.rs
src/components/: Camera.tsx  EffectSelect.tsx  ModeSelect.tsx  OrderList.tsx  Payment.tsx  PhotoPreview.tsx  StyleSelect.tsx
src/services/: api.ts
src/styles/: global.css
src/types/: index.ts
